@@ -1,30 +1,310 @@
 # BaiyunU Blogroll
 
- - 更新时间:2024-11-26 16:48:53
+ - 更新时间:2025-03-28 16:45:40
+
+## [Maven使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/Maven%E4%BD%BF%E7%94%A8/)
+**作者:** SIMULEITE
+**发表时间:** 2025-01-15
+
+**摘要:** 微服务非单体项目，可以用下面的脚本启动微服务。<
+
+**更新时间:** 2025-03-23 07:32:12
+
+## [蓝桥杯 错题本](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E9%94%99%E9%A2%98%E6%9C%AC/%E8%93%9D%E6%A1%A5%E6%9D%AF%20%E9%94%99%E9%A2%98%E6%9C%AC/)
+**作者:** SIMULEITE
+**发表时间:** 2025-03-18
+
+**摘要:** 3513 岛屿个数#外岛数量 #bfs杰克船长算法杰克船长在公海上游荡，每发现一处岛屿，他就会绕着岛走一圈，并把这个岛标记到地图上。这个问题的解决方法就在这里：我们一定要有一片完全连通的公海，只有在公海上遇到岛屿，才标记岛屿数量；绝不踏入内海。可是测试用例是这样的：5 50111111001101011000111111这个测试用例，只有(0, 0)是公海，怎么办呢？我们用一圈公海把测试用例包围起来：privatestaticvoidprocessInput(Scanner sc){M = sc.nextInt();N = sc.nextInt();sc.nextLine();map =newint[M +2][N +2];// 注意+2，多一圈'0'表示公海visitedSea =newboolean[M +2][N +2];visitedIsland =newboolean[M +2][N +2];cnt =0;for(intx=1; x <= M; x +=1) {Stringline=sc.nextLine();for(inty=1; y <= N; y +=1) {map[x][y] = line.charAt(y -1) -'0';}}}
+
+**更新时间:** 2025-03-19 10:48:35
+
+## [关于Liunx安全管理与加固](https://blog.nyc1.xyz/2024/04/20/%E5%85%B3%E4%BA%8ELiunx%E5%AE%89%E5%85%A8%E7%AE%A1%E7%90%86%E4%B8%8E%E5%8A%A0%E5%9B%BA/)
+**作者:** NgaiYeanCoi
+**发表时间:** 2024-04-20
+
+**摘要:** 前言介于上次被一个陌生的德国ip入侵之后不得已重置整个系统，所有已经部署的业务都得重来。由此可见做好安全管理多么重要！以下一些常见的操作来增加系统安全防止被恶意入侵系统环境：Debian 12保持系统最新更新软件源并升级所有软件包123sudo apt update && sudo apt upgrade -ysudo apt dist-upgrade -y清理旧内核和无用包1sudo apt autoremove --purge启用自动安全更新12sudo apt install unattended-upgradessudo dpkg-reconfigure -plow unattended-upgrades# 选择"Yes"启用选择”Yes”启用Linux 防火墙配置开启防火墙，将不必要的端口关闭，缩小需要防范的范围。关于如何配置可以看我这篇文章Linux UFW防火墙使用教程，里面有详细的介绍。Linux SSH服务安全备份记得备份好你的SSHD的配置文件以防万一1# cp /etc/ssh/sshd_config /etc/ssh/backup.sshd_configOpenSSH的路径OpenSSH 服务的配置文件路径为 /etc/ssh/sshd_config ，要配置它，必须得使用系统管理员（ root ）权限或使用 sudo 命令临时获得的管理员权限。配置信息大概长这样的链接这里默认你已经会用编辑工具没有的话请安装VIM1# apt-get install vim编辑配置文件准备好就直接编辑1# vim /etc/ssh/sshd_config
+
+**更新时间:** 2025-03-18 02:37:03
+
+## [LeetCode100 错题本](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E9%94%99%E9%A2%98%E6%9C%AC/LeetCode100%20%E9%94%99%E9%A2%98%E6%9C%AC/)
+**作者:** SIMULEITE
+**发表时间:** 2024-09-30
+
+**摘要:** Hash字母异位词排序每一个单词，就知道是不是异位词。两数之和从数组中，找到nums[i] + nums[j] == target，并返回{ i, j }。思路是双重循环，遍历每一个元素，求和是否为target。然而，双重循环需要O(N2)O(N^2)O(N2)的复杂度。因此，可以使用一张表，使用containsKey方法识别是否存在当前i的target - nums[i]，即可减少一重循环。关键思想用Map高效率查找，减少一重循环。最长连续序列从乱序数组中，找到最长连续（数组中不一定连续）的序列。要求O(N)O(N)O(N)。首先用数组的值存入哈希表，然后遍历数组，判断map.constains(curNum++)。然而，即使这样还是效率不够高。优化中间值不进入循环，序列开始值才进入，使用!contains(curNum - 1)判断是否为序列开始值去重，不要哈希表，不需要键值对，使用哈希Set，只存储值。关键思想去重；不处理中间值
+
+**更新时间:** 2025-03-16 07:04:45
+
+## [动态规划学习指南](http://simuleite.github.io/ComputerScience/%E6%8C%87%E5%8D%97/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92%E5%AD%A6%E4%B9%A0%E6%8C%87%E5%8D%97/)
+**作者:** SIMULEITE
+**发表时间:** 2024-10-21
+
+**摘要:** Author：aatalykOrigin：LinkBefore starting the topic let me introduce myself. I am a Mobile Developer currently working in Warsaw and spending my free time for interview preparations. I started to prepare for interviews two years ago. At that time I should say I could not solve the two sum problem. Easy problems seemed to me like hard ones so most of the time I had to look at editorials and discuss section. Currently, I have solved ~800 problems and time to time participate in contests. I usually solve 3 problems in a contest and sometimes 4 problems. Ok, lets come back to the topic.Recently I have concentrated my attention on Dynamic Programming cause its one of the hardest topics in an interview prep. After solving ~140 problems in DP I have noticed that there are few patterns that can be found in different problems. So I did a research on that and find the following topics. I will not give complete ways how to solve problems but these patterns may be helpful in solving DP.PatternsMinimum (Maximum) Path to Reach a TargetDistinct WaysMerging IntervalsDP on StringsDecision Making
+
+**更新时间:** 2025-03-16 00:56:44
+
+## [前后端分离](http://simuleite.github.io/ComputerScience/%E7%9F%A5%E8%AF%86/%E5%89%8D%E5%90%8E%E7%AB%AF%E5%88%86%E7%A6%BB/)
+**作者:** SIMULEITE
+**发表时间:** 2024-12-26
+
+**摘要:** 1.0 Session有状态：用户请求接口 ->从Session中读取用户信息</stron
+
+**更新时间:** 2025-03-15 05:56:55
+
+## [DP 设计模式](http://simuleite.github.io/ComputerScience/%E7%9F%A5%E8%AF%86/DP%20%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/)
+**作者:** SIMULEITE
+**发表时间:** 2024-11-02
+
+**摘要:** 策略模式classMallardDuckextendsDuck{publicMallardDuck(){quackBehavior =newQuack();flyBehavior =newFlyWithWings();}}classModelDuckextendsDuck{publicModelDuck(){quackBehavior =newQuack();flyBehavior =newFlyNoWay();// 组合不同的方法}}classMain{publicstaticvoidmain(String[] args){Duckreal=newMallardDuck();Duckmodel=newModelDuck();real.fly();model.fly();// 调用同样的接口}}识别应用中变化的方面，把它们和不变的方面分开。针对接口编程，而不是针对实现编程。// ImplementDogd=newDog();d.bark();// InterfaceAnimaldog=newDog();dog.makeSound();// abstract优先使用组合而不是继承。summary策略模式定义了算法族并分别封装。策略让算法变化独立于使用它的客户。
+
+**更新时间:** 2025-03-15 05:56:35
+
+## [SpringCloud Netflix笔记](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E6%A1%86%E6%9E%B6/Spring/SpringCloud%20Netfilx%E7%AC%94%E8%AE%B0/)
+**作者:** SIMULEITE
+**发表时间:** 2024-12-31
+
+**摘要:** 微服务微服务：解决接口越来越多，单体应用运行缓慢问题。踩坑记录找不到Mapper***************************APPLICATION FAILED TO START***************************Description:Field deviceMapper in com.esagent.es.EsDataInit required a bean of type 'com.example.mapper.YourMapper' that could not be found.The injection point has the following annotations:- @org.springframework.beans.factory.annotation.Autowired(required=true)Action:Consider defining a bean of type 'com.example.mapper.YourMapper' in your configuration.原因是mybatis版本有问题！<dependencyManagement><dependencies><dependency><groupId>org.mybatis.spring.boot</groupId><artifactId>mybatis-spring-boot-starter</artifactId><version>3.0.4</version><!-- 版本需要和其他依赖对上 --></dependency></dependencies></dependencyManagement>
+
+**更新时间:** 2025-03-15 05:54:39
+
+## [InnoDB原理](http://simuleite.github.io/ComputerScience/%E7%9F%A5%E8%AF%86/InnoDB%E5%8E%9F%E7%90%86/)
+**作者:** SIMULEITE
+**发表时间:** 2025-02-24
+
+**摘要:** Mysql体系结构DB与InstanceDB：数据库可以是ibd文件、放在内存的文件，是物理操作系统文件或其他形式文件类型的集合。Instance：Mysql数据库由后台线程及一个共享内存区组成。数据库实例才是真正操作数据库文件的。在集群情况下，可能存在一个DB被多个Instance使用的情况。Mysql被设计为单进程多线程，在OS上的表现是一个进程。插件式表存储引擎存储引擎基于表，而不是DB。存储引擎对开发人员透明。索引原理MySQL使用的是B+树作为索引的数据结构B树是一个分支内按顺序存放多个节点数据的数据结构；而B+树在此基础上，在分支内只存储索引，只在叶子节点存储数据（这样每一层可以存储更多索引，减少层数），并且在叶节点之间用指针互相连接，提高访问效率。
+
+**更新时间:** 2025-03-15 05:48:10
+
+## [OpenManus本地部署](https://lathezero.github.io/2025/03/12/OpenModel/OpenManus/)
+**作者:** 雷德基洛
+**发表时间:** 2025-03-12
+
+**摘要:** OpenManus 本地部署
+
+**更新时间:** 2025-03-13 07:44:56
+
+## [洛谷 错题本](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E9%94%99%E9%A2%98%E6%9C%AC/%E6%B4%9B%E8%B0%B7%20%E9%94%99%E9%A2%98%E6%9C%AC/)
+**作者:** SIMULEITE
+**发表时间:** 2025-02-28
+
+**摘要:** P1004 [NOIP 2000 提高组] 方格取数#走两次dp如果只走一次，这题是非常经典的DP。但是要走两次，就变得非常有难度。首先，可以简单地推广：要走两次，dp就存四个下标：int[][][][] dp =newint[N][N][N][N];我们只需要遍历所有可能，并且比较四种走法（同下、同右、一下一右），取最大值就可以了。注意，一个数只能取一次，需要一个判断防止重复取数。for(inti1=1; i1 < N; i1 +=1) {for(inti2=1; i2 < N; i2 +=1) {for(intj1=1; j1 < N; j1 +=1) {for(intj2=1; j2 < N; j2 +=1) {intstep=map[i1][j1];if(i2 != i1 && j2 != j1) step += map[i2][j2];dp[i1][j1][i2][j2] =Math.max(dp[i1-1][j1][i2-1][j2],Math.max(dp[i1-1][j1][i2][j2-1],Math.max(dp[i1][j1-1][i2-1][j2],dp[i1][j1-1][i2][j2-1]))) + step;}}}}System.out.println(dp[N-1][N-1][N-1][N-1]);当然，4个循环时间复杂度太高了。我们可以用一个k == i1 + j1 == i2 + j2来减少一重循环。这个k利用得很巧妙，因为每次要么向下走，要么向右走，所以k-1 == i-1 + j == i + j-1，全程使用k-1就能代表所有情况。
+
+**更新时间:** 2025-03-12 01:32:05
+
+## [CosyVoiceDeploy](https://lathezero.github.io/2025/01/05/2025/CosyVoiceDeploy/)
+**作者:** 雷德基洛
+**发表时间:** 2025-01-05
+
+**摘要:** CosyVoice 本地部署教程
+
+**更新时间:** 2025-02-28 14:02:13
+
+## [Android 2025 年每月安全补丁分析索引](https://blog.canyie.top/2025/01/29/android-security-bulletin-index-2025/)
+**作者:** 残页
+**发表时间:** 2025-01-29
+
+**摘要:** 2024 年度补丁分析：点我给大家分享一个好消息，经过一年的研究，我现在在 Google BugHunters 平台上总排名 43，2024 年度第 6 名，Android Program 第 10 名！感谢各位一年陪伴！最后更新时间：2025/02/24 更新内容：更新 2025-02 并添加状态更新
+
+**更新时间:** 2025-02-24 08:31:03
+
+## [MarsCode 错题本](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E9%94%99%E9%A2%98%E6%9C%AC/MarsCode%20%E9%94%99%E9%A2%98%E6%9C%AC/)
+**作者:** SIMULEITE
+**发表时间:** 2025-01-18
+
+**摘要:** 51 和的逆运算#全排列这题在给定的和不重复的情况下很简单：首先升序排序好数组sums，生成答案数组nums[n]。nums[0] + nums[1]必然等于sums[0]（最小值），nums[0] + nums[2]必然等于sums[1]（次小值）, … ,nums[n-2] + nums[n-1]必然等于sums[lastIndex]（最大值）。可以反向推测出nums[0] = (sums[0] + sums[1] - sums[n-1]) / 2，论证看下方：nums[n] = {a, b, c, d, e} 从小到大排列a + b = sums[0] (1) // 最小a + c = sums[1] (2)a + d = sums[2]a + e = sums[3]b + c = sums[4] (3)...(1) + (2) = 2a + (3)2a = sums[0] + sums[1] - sums[n-1] = (1) + (2) - (3)得出了nums[0]，其他数字都可以用nums[i] = sums[i-1] - nums[0]推出来但是给定的和重复的情况下，上面的第2条就不成立了。例如测试用例3：
+
+**更新时间:** 2025-02-21 14:14:04
+
+## [Linux UFW防火墙使用教程](https://blog.nyc1.xyz/2024/03/18/Linux%20UFW%E9%98%B2%E7%81%AB%E5%A2%99%E4%BD%BF%E7%94%A8%E6%95%99%E7%A8%8B/)
+**作者:** NgaiYeanCoi
+**发表时间:** 2024-03-18
+
+**摘要:** 安装Ubuntu & Debian1# apt-get install ufw -yCentOSCentOS默认软件源不提供UFW，所以你需要安装EPEL软件源，运行以下命令：1# yum install epel-release -y安装完成后使用以下命令安装UFW：1# yum install --enablerepo="epel" ufw -yUFW安装后，可以通过以下命令来启动UFW服务并使其在启动时启动（一般在完成默认配置后再重启）：1# ufw enable如果运行ufw命令时报Command Not Found错误，可以使用whereis ufw来确定ufw的位置，之后你也可以顺手设置一下alias。接下来，使用以下命令检查UFW的状态，可以看到以下输出：12# ufw statusStatus: active还可以通过运行以下命令来禁用UFW防火墙（后面可以通过enable命令随时启用服务）：1# ufw disable如果你决定要重新开始，则可以使用reset命令：1# ufw reset这将禁用UFW并删除之前定义的任何规则。
+
+**更新时间:** 2025-02-14 09:25:57
+
+## [CVE-2024-49721 InputMethodSubtypeArray 反序列化漏洞分析](https://blog.canyie.top/2025/02/04/CVE-2024-49721/)
+**作者:** 残页
+**发表时间:** 2025-02-04
+
+**摘要:** 神马，都 2025 年啦，还有 Parcel Mismatch 漏洞？！？对！你没听错！最经典最被广泛利用的 Parcel Mismatch 漏洞，它又双叒叕来了！怕了吗？！？去年我和Cxxsheng对整个 Parcelable IPC 机制进行了一些研究，并开发了一个扫描器用以扫描相关漏洞。此漏洞就是我们研究过程中发现的漏洞之一。我们于 2024 年 12 月 3 日提交漏洞报告，后被告知与另一份漏洞报告重复。以下记录了我们当时的分析。部分敏感信息已被移除或脱敏以保证安全。
+
+**更新时间:** 2025-02-06 09:14:49
+
+## [Android 平台常见安全漏洞类型](https://blog.canyie.top/2024/11/05/android-platform-common-vulnerabilities/)
+**作者:** 残页
+**发表时间:** 2024-11-04
+
+**摘要:** 本文适用于已对 Android 开发有基础了解，希望了解 Android 系统层常见安全漏洞的人。祝大家写代码无 bug，挖洞天天挖到 Critical RCE 漏洞链。本文开始创作时间：2024-02-19 完成时间：2024-02-29 发布时间：2024-11-05
+
+**更新时间:** 2025-01-29 08:51:41
+
+## [Android 2024 每月安全补丁分析索引](https://blog.canyie.top/2024/04/18/android-security-bulletin-index/)
+**作者:** 残页
+**发表时间:** 2024-04-18
+
+**摘要:** 之前一直在看的每月补丁分析的博客https://wrlus.com/看起来是不再更新了，想了想反正自己每个月也要去追着看，干脆写一下分析得了，方便自己后面找。本人很菜，分析的大部分都是 Java 层漏洞，大佬别骂我 QAQ最初发表在我的 telegram 频道。每月补丁都会在此文中更新。2025 年度补丁分析：点我最后更新时间：2025/01/29 更新内容：添加 2025 年度链接
+
+**更新时间:** 2025-01-29 08:50:02
+
+## [关于配置Reality的加分项](https://blog.nyc1.xyz/2025/01/19/%E5%85%B3%E4%BA%8E%E9%85%8D%E7%BD%AEReality%E7%9A%84%E5%8A%A0%E5%88%86%E9%A1%B9/)
+**作者:** NgaiYeanCoi
+**发表时间:** 2025-01-18
+
+**摘要:** 关于配置Reality的加分项加分项：IP 相近（更像，且延迟低），Server Hello 后的握手消息一起加密（如 dl.google.com），有 OCSP Stapling。配置加分项：禁回国流量，TCP/80、UDP/443 也转发（REALITY 对外表现即为端口转发，目标 IP 冷门或许更好）。
+
+**更新时间:** 2025-01-19 06:45:55
+
+## [sprintboot notes](https://lathezero.github.io/2025/01/12/2025/spbNotes/)
+**作者:** 雷德基洛
+**发表时间:** 2025-01-12
+
+**摘要:** SpringBoot框架
+
+**更新时间:** 2025-01-13 08:54:23
+
+## [Self-changing Data Type - CVE-2024-40676 漏洞分析](https://blog.canyie.top/2024/11/07/self-changing-data-type/)
+**作者:** 残页
+**发表时间:** 2024-11-07
+
+**摘要:** 今年 10 月份的时候，Android 安全公告用 CVE-2024-40676 的编号公布了一个很奇怪的patch。AccountManagerService checkKeyIntent() 负责检查 account authenticator 传回的 intent，确保它安全再传回给 caller，防止 launch anywhere 漏洞。这个补丁看起来很暴力也很奇怪，直接 ban 了所有带有 content URI 的 intent，似乎完全不考虑兼容性。是什么样的漏洞才要上如此暴力的修复方法？注：如下全是我的猜测，由于联系不到漏洞作者本人，无法确认这是否就是原本的问题。
+
+**更新时间:** 2025-01-10 08:29:11
+
+## [JavaWeb笔记](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E6%A1%86%E6%9E%B6/JavaWeb%E7%AC%94%E8%AE%B0/)
+**作者:** SIMULEITE
+**发表时间:** 2024-11-27
+
+**摘要:** TomcatJRE报错一般教程会让我们配置JAVA_HOME和JRE_HOME，然后启动Tomcat；然而，在JDK9以后，就不默认包含JRE了。此时，我们使用命令jlink --module-path jmods --add-modules java.desktop --output jre生成一个JRE后，启动Tomcat，就会报错：WARNING: Unknown module: java.rmi specified to --add-opensException in thread "main" java.lang.NoClassDefFoundError: java/util/logging/Loggerat org.apache.juli.logging.DirectJDKLog.<init>(DirectJDKLog.java:61)at org.apache.juli.logging.DirectJDKLog.getInstance(DirectJDKLog.java:181)at org.apache.juli.logging.LogFactory.getInstance(LogFactory.java:133)at org.apache.juli.logging.LogFactory.getInstance(LogFactory.java:156)at org.apache.juli.logging.LogFactory.getLog(LogFactory.java:211)at org.apache.catalina.startup.Bootstrap.<clinit>(Bootstrap.java:49)Caused by: java.lang.ClassNotFoundException: java.util.logging.Loggerat java.base/jdk.internal.loader.BuiltinClassLoader.loadClass(BuiltinClassLoader.java:641)at java.base/jdk.internal.loader.ClassLoaders$AppClassLoader.loadClass(ClassLoaders.java:188)at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:525)... 6 more这时候，只需要把jre文件和JRE_HOME环境变量删除，Tomcat就能正常启动
+
+**更新时间:** 2025-01-08 02:02:19
+
+## [Markdown 写作指南](https://lathezero.github.io/2024/12/28/reference/markdown-guide/)
+**作者:** 雷德基洛
+**发表时间:** 2024-12-28
+
+**摘要:** 这是一个完整的 Markdown 写作指南，包含代码高亮、格式化等常用功能的示例...
+
+**更新时间:** 2025-01-06 13:57:03
+
+## [微信小程序开发iPhone底部因为横杠适配有问题](https://lathezero.github.io/2024/12/22/2024/wechat-miniapp/)
+**作者:** 雷德基洛
+**发表时间:** 2024-12-22
+
+**摘要:** 微信小程序开发iPhone底部因为横杠适配问题解决
+
+**更新时间:** 2025-01-06 13:56:54
+
+## [解决 phpstudy 和本地 mysql 不兼容问题](https://lathezero.github.io/2024/12/23/2024/mysql_and_phpstudy/)
+**作者:** 雷德基洛
+**发表时间:** 2024-12-23
+
+**摘要:** 解决 phpstudy 和本地 mysql 不兼容问题
+
+**更新时间:** 2025-01-06 13:56:33
+
+## [Maven 配置与创建](https://lathezero.github.io/2024/12/16/2024/maven/)
+**作者:** 雷德基洛
+**发表时间:** 2024-12-16
+
+**摘要:** Maven 基础配置与创建
+
+**更新时间:** 2025-01-06 13:56:28
+
+## [web开发中的分层解耦](https://lathezero.github.io/2025/01/02/2025/ThreeTierSchema/)
+**作者:** 雷德基洛
+**发表时间:** 2025-01-02
+
+**摘要:** SpringBoot中对三层架构进行分层与解耦
+
+**更新时间:** 2025-01-06 13:56:02
+
+## [MyBatis](https://lathezero.github.io/2025/01/06/2025/MyBatis/)
+**作者:** 雷德基洛
+**发表时间:** 2025-01-06
+
+**摘要:** MyBatis笔记
+
+**更新时间:** 2025-01-06 13:54:13
+
+## [Eureka中间件](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E4%B8%AD%E9%97%B4%E4%BB%B6/Eureka%E7%AC%94%E8%AE%B0/)
+**作者:** SIMULEITE
+**发表时间:** 2025-01-03
+
+**摘要:** 注册中心Eureka能够自动注册并发现微服务，然后对服务的状态、信息进行集中管理。当我们需要获取其他服务的信息时，只需要向Eureka进行查
+
+**更新时间:** 2025-01-06 11:59:12
 
 ## [Mybatis使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/Mybatis%E4%BD%BF%E7%94%A8/)
 **作者:** SIMULEITE
 **发表时间:** 2024-11-22
 
-**摘要:** mybatis-config.xml<figure class="highlight xml"
+**摘要:** mybatis-config.xml<?xml version="1.0"encoding="UTF-8"?><!DOCTYPEconfigurationPUBLIC"-//mybatis.org//DTD Config 3.0//EN""http://mybatis.org/dtd/mybatis-3-config.dtd"><configuration><environmentsdefault="development"><environmentid="development"><!-- 设置环境 --><transactionManagertype="JDBC"/><dataSourcetype="POOLED"><propertyname="driver"value="${驱动类（含包名）}"/><propertyname="url"value="${数据库连接URL}"/><propertyname="username"value="${用户名}"/><propertyname="password"value="${密码}"/></dataSource></environment></environments></configuration>Util一般只需要创建一次，所以创建一个工具类publicclassMybatisUtil{//在类加载时就进行创建privatestaticSqlSessionFactory sqlSessionFactory;static{try{sqlSessionFactory =newSqlSessionFactoryBuilder().build(newFileInputStream("mybatis-config.xml"));}catch(FileNotFoundException e) {e.printStackTrace();}}/*** 获取一个新的会话*@paramautoCommit 是否开启自动提交（跟JDBC是一样的，如果不自动提交，则会变成事务操作）*@returnSqlSession对象*/publicstaticSqlSessiongetSession(booleanautoCommit){returnsqlSessionFactory.openSession(autoCommit);}}
 
-**更新时间:** 2024-11-23 09:21:00
+**更新时间:** 2025-01-05 02:09:08
 
-## [Maven使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/Maven%E4%BD%BF%E7%94%A8/)
+## [SpringBoot常用框架](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E6%A1%86%E6%9E%B6/Spring/SpringBoot%E5%B8%B8%E7%94%A8%E6%A1%86%E6%9E%B6/)
 **作者:** SIMULEITE
-**发表时间:** 2024-11-22
+**发表时间:** 2024-12-23
 
-**摘要:** 基本命令mvn package测试并打包到target/，使用java -
+**摘要:** SpringBoot Mail 邮箱验证码<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-mail</artifactId></dependency>spring:mail:host:your.SMTP.hostusername:your_server_email@email.compassword:your_passowrd@ResourceJavaMailSender sender;@PostMapping("/verification-email")publicStringsendVerificationEmail(@RequestParamString targetEmail,HttpSession session){SimpleMailMessagemessage=newSimpleMailMessage();message.setSubject(EMAIL_TITLE);intvCode=getVerificationCode();session.setAttribute("vcode", vCode);session.setAttribute("uemail", email);message.setText(EMAIL_CONTEXT + code);message.setTo(targetEmail);message.setFrom(EMAIL_SERVEREMAIL);// 与配置文件中的保持一致sender.send(message);return"发送成功";// 前端弹窗可以接受此参数}@PostMapping("/register")publicStringregister(@RequestParamString username,@RequestParamString email,@RequestParamString code,@RequestParamString password,HttpSession session){StringsessionCode=session.getAttribute("vcode").toString;StringsessionEmail=session.getAttribute("uemail").toString;if(sessionCode ==null) {return"验证码为空";}if(!sessionCode.equals(code)) {return"验证码错误！";}if(!sessionEmail.equals(email)) {return"请获取验证码";}}
 
-**更新时间:** 2024-11-23 06:40:42
+**更新时间:** 2025-01-05 02:06:15
 
-## [](http://simuleite.github.io/ComputerScience/%E9%A1%B9%E7%9B%AE/%E5%9B%BE%E4%B9%A6%E9%A6%86%20Maven/)
+## [SpringSecurity笔记](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E6%A1%86%E6%9E%B6/Spring/SpringSecurity%E7%AC%94%E8%AE%B0/)
 **作者:** SIMULEITE
-**发表时间:** 2024-11-19
+**发表时间:** 2024-12-04
 
-**摘要:** 总体思路设计数据库创建Entity创建Mapper定义增删查改
+**摘要:** Spring Security 初始化导入依赖
 
-**更新时间:** 2024-11-19 10:57:07
+**更新时间:** 2025-01-04 02:49:55
+
+## [SpringMVC笔记](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E6%A1%86%E6%9E%B6/Spring/SpringMVC%E7%AC%94%E8%AE%B0/)
+**作者:** SIMULEITE
+**发表时间:** 2024-12-03
+
+**摘要:** MVC<span cla
+
+**更新时间:** 2025-01-04 02:49:51
+
+## [SpringBoot笔记](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E6%A1%86%E6%9E%B6/Spring/SpringBoot%E7%AC%94%E8%AE%B0/)
+**作者:** SIMULEITE
+**发表时间:** 2024-12-20
+
+**摘要:** application.propertiesProperty形式server.port=80 // 端口号aruge.arugement=value@Value("{argue.argument}")String argu;YAML形式server:port:80spring:datasource:url:jdbc:mysql://localhost:3306/db_nameusername:password:driver-class-name:com.mysql.cj.Drivermvc:static-path-pattern:/static/**security:filter:order:-100# Spring Security Filter 优先级user:name:'admin'password:'Abc123.'roles:-admin-user
+
+**更新时间:** 2025-01-04 02:49:41
+
+## [Redis使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/Redis%E4%BD%BF%E7%94%A8/)
+**作者:** SIMULEITE
+**发表时间:** 2024-10-26
+
+**摘要:** 基本操作General# 返回给定模式的keysKEYS patterKEYS * # 返回全部KEYS set* # 返回set开头的keysEXISTS keyTYPE keyDEL keyStringSET key valueGET key# Set Extend TimeSETEX key seconds value# Set When Key Not ExistSETNX key valueHashHSET key field valueHGET key fieldHDEL key field# Get All FieldsHKEYS key# Get All ValuesHVALS keyflowchart LRkey[key]item[field1: value1field2: value2]key --> itemListLPUSH key value1 value2# Get Key From Start To StopLRANGE key start stop# Right POPRPOP key# List LengthLLEN keySetSADD key mem1 mem2SMEMBERS key# Set SizeSCARD keySINTER key1 key2SUNION key1 key2# DeleteSREM key mem1 mem2Sorted Set / ZSetZADD key score1 mem1 score2 mem2# Show ListZRANGE key start stop (WITHSCORES)# Increse MemberZINCRBY key increment memberZREM key mem1 mem2
+
+**更新时间:** 2025-01-02 05:39:38
+
+## [Java 实现各排序算法](https://lathezero.github.io/2024/09/28/2024/sortAlgorithm/)
+**作者:** 雷德基洛
+**发表时间:** 2024-09-27
+
+**摘要:** 排序算法
+
+**更新时间:** 2024-12-31 00:37:07
+
+## [MySQL 基础教程](https://lathezero.github.io/2024/12/23/2024/MySQL/)
+**作者:** 雷德基洛
+**发表时间:** 2024-12-23
+
+**摘要:** MySQL 是最流行的关系型数据库之一，本文将介绍其基本概念和常用命令...
+
+**更新时间:** 2024-12-29 08:47:46
+
+## [scp使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/scp%E4%BD%BF%E7%94%A8/)
+**作者:** SIMULEITE
+**发表时间:** 2024-12-24
+
+**摘要:** 上传文件<spa
+
+**更新时间:** 2024-12-27 08:50:10
 
 ## [Reviving an already patched vulnerability for half a year? The second spring of CVE-2024-0044](https://blog.canyie.top/2024/10/08/CVE-2024-0044/)
 **作者:** 残页
@@ -42,54 +322,6 @@
 
 **更新时间:** 2024-11-12 09:57:26
 
-## [Android 每月安全补丁分析索引](https://blog.canyie.top/2024/04/18/android-security-bulletin-index/)
-**作者:** 残页
-**发表时间:** 2024-04-18
-
-**摘要:** 之前一直在看的每月补丁分析的博客https://wrlus.com/看起来是不再更新了，想了想反正自己每个月也要去追着看，干脆写一下分析得了，方便自己后面找。本人很菜，分析的大部分都是 Java 层漏洞，大佬别骂我 QAQ最初发表在我的 telegram 频道。每月补丁都会在此文中更新。最后更新时间：2024/11/11 更新内容：更新 2024-11
-
-**更新时间:** 2024-11-12 09:10:44
-
-## [Spring Framework](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/Spring%20Framework/)
-**作者:** SIMULEITE
-**发表时间:** 2024-08-10
-
-**摘要:** 所有的Java云平台都能够使用基于JAR的打包方式，WAR文件只在一些云平台上能够运行。Pom.xml 更换 Maven 源<?xml version="1.0"encoding="UTF-8"?><projectxmlns="http://maven.apache.org/POM/4.0.0"xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"><modelVersion>4.0.0</modelVersion><groupId>org.springframework.quoters</groupId><artifactId>quoters-incorporated</artifactId><version>0.0.1-SNAPSHOT</version><packaging>jar</packaging><name>quoters-incorporated</name><description>REST service to support the guides</description><developers><developer><id>gturnquist</id><name>Greg Turnquist</name><email>gturnquist at vmware.com</email><organization>VMware, Inc.</organization><roles><role>Project Lead</role></roles></developer></developers><organization><name>VMware, Inc.</name><url>https://spring.io</url></organization><licenses><license><name>Apache License, Version 2.0</name><url>https://www.apache.org/licenses/LICENSE-2.0</url><comments>Copyright 2011 the original author or authors.Licensed under the Apache License, Version 2.0 (the "License");you may not use this file except in compliance with the License.You may obtain a copy of the License athttps://www.apache.org/licenses/LICENSE-2.0Unless required by applicable law or agreed to in writing, softwaredistributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express orimplied.See the License for the specific language governing permissions andlimitations under the License.</comments></license></licenses><parent><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-parent</artifactId><version>2.7.5</version><relativePath/><!-- lookup parent from repository --></parent><properties><project.build.sourceEncoding>UTF-8</project.build.sourceEncoding><project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding><java.version>1.8</java.version></properties><dependencies><dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-data-jpa</artifactId></dependency><dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-web</artifactId></dependency><dependency><groupId>com.h2database</groupId><artifactId>h2</artifactId><scope>runtime</scope></dependency><dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-test</artifactId><scope>test</scope></dependency></dependencies><!-- 配置阿里云仓库 --><repositories><repository><id>aliyun-repos</id><url>https://maven.aliyun.com/repository/public</url><releases><enabled>true</enabled></releases><snapshots><enabled>false</enabled></snapshots></repository></repositories><pluginRepositories><pluginRepository><id>aliyun-repos</id><url>https://maven.aliyun.com/repository/public</url><releases><enabled>true</enabled></releases><snapshots><enabled>false</enabled></snapshots></pluginRepository></pluginRepositories><build><plugins><plugin><groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId></plugin></plugins></build></project>Tight Coupling 紧耦合在Spring框架以前，使用排序算法需要将算法实例化publicclassComplexBusinessService{SortAlgorithmsortAlgorithm=newBubbleSortAlgorithm;}publicclassBubbleSortAlgorithmimplementsSortAlgorithm{...}Good code has loose coupling.移除依赖项的实例化可以移除紧耦合publicclassComplexBusinessService{SortAlgorithm sortAlgorithm;// = new BubbleSortAlgorithm();publicComplexBusinessService(SortAlgorithm sortAlgorithm){// 创建构造函数this.sortAlgorithm = sortAlgorithm;}publicclassBubbleSortAlgorithmimplementsSortAlgorithm{...}Spring Framework instantiates objects and populates the dependencies.
-
-**更新时间:** 2024-11-08 02:20:22
-
-## [Self-changing Data Type - CVE-2024-40676 漏洞分析](https://blog.canyie.top/2024/11/07/self-changing-data-type/)
-**作者:** 残页
-**发表时间:** 2024-11-07
-
-**摘要:** 今年 10 月份的时候，Android 安全公告用 CVE-2024-40676 的编号公布了一个很奇怪的patch。AccountManagerService checkKeyIntent() 负责检查 account authenticator 传回的 intent，确保它安全再传回给 caller，防止 launch anywhere 漏洞。这个补丁看起来很暴力也很奇怪，直接 ban 了所有带有 content URI 的 intent，似乎完全不考虑兼容性。是什么样的漏洞才要上如此暴力的修复方法？注：如下全是我的猜测，由于联系不到漏洞作者本人，无法确认这是否就是原本的问题。
-
-**更新时间:** 2024-11-07 03:34:02
-
-## [LeetCode100 错题本](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/LeetCode100%20%E9%94%99%E9%A2%98%E6%9C%AC/)
-**作者:** SIMULEITE
-**发表时间:** 2024-09-30
-
-**摘要:** Hash字母异位词排序每一个单词，就知道是不是异位词。两数之和从数组中，找到nums[i] + nums[j] == target，并返回{ i, j }。思路是双重循环，遍历每一个元素，求和是否为target。然而，双重循环需要O(N2)O(N^2)O(N2)的复杂度。因此，可以使用一张表，使用containsKey方法识别是否存在当前i的target - nums[i]，即可减少一重循环。关键思想用Map高效率查找，减少一重循环。最长连续序列从乱序数组中，找到最长连续（数组中不一定连续）的序列。要求O(N)O(N)O(N)。首先用数组的值存入哈希表，然后遍历数组，判断map.constains(curNum++)。然而，即使这样还是效率不够高。优化中间值不进入循环，序列开始值才进入，使用!contains(curNum - 1)判断是否为序列开始值去重，不要哈希表，不需要键值对，使用哈希Set，只存储值。关键思想去重；不处理中间值
-
-**更新时间:** 2024-11-05 03:27:07
-
-## [Android 平台常见安全漏洞类型](https://blog.canyie.top/2024/11/05/android-platform-common-vulnerabilities/)
-**作者:** 残页
-**发表时间:** 2024-11-04
-
-**摘要:** 本文适用于已对 Android 开发有基础了解，希望了解 Android 系统层常见安全漏洞的人。祝大家写代码无 bug，挖洞天天挖到 Critical RCE 漏洞链。本文开始创作时间：2024-02-19 完成时间：2024-02-29 发布时间：2024-11-05
-
-**更新时间:** 2024-11-04 12:43:37
-
-## [DP 设计模式](http://simuleite.github.io/ComputerScience/%E8%AF%BE%E7%A8%8B/DP%20%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/)
-**作者:** SIMULEITE
-**发表时间:** 2024-11-02
-
-**摘要:** 策略模式classMallardDuckextendsDuck{publicMallardDuck(){quackBehavior =newQuack();flyBehavior =newFlyWithWings();}}classModelDuckextendsDuck{publicModelDuck(){quackBehavior =newQuack();flyBehavior =newFlyNoWay();// 组合不同的方法}}classMain{publicstaticvoidmain(String[] args){Duckreal=newMallardDuck();Duckmodel=newModelDuck();real.fly();model.fly();// 调用同样的接口}}识别应用中变化的方面，把它们和不变的方面分开。针对接口编程，而不是针对实现编程。// ImplementDogd=newDog();d.bark();// InterfaceAnimaldog=newDog();dog.makeSound();// abstract优先使用组合而不是继承。summary策略模式定义了算法族并分别封装。策略让算法变化独立于使用它的客户。
-
-**更新时间:** 2024-11-03 07:05:46
-
 ## [白云学院-关于如何申请学校edu邮箱](https://blog.nyc1.xyz/2024/10/07/%E7%99%BD%E4%BA%91%E5%AD%A6%E9%99%A2-%E5%85%B3%E4%BA%8E%E5%A6%82%E4%BD%95%E7%94%B3%E8%AF%B7%E5%AD%A6%E6%A0%A1edu%E9%82%AE%E7%AE%B1/)
 **作者:** NgaiYeanCoi
 **发表时间:** 2024-10-06
@@ -97,30 +329,6 @@
 **摘要:** 前言很多同学都不知道教育邮箱、学信网认证有很多隐藏的福利可以省下很多钱，并且许多企业都有推行高校学生权益，你不单止可以免费使用正版软件，还可以以最优惠的价格购买他们的产品。就来让我打破你们的信息差吧！
 
 **更新时间:** 2024-11-01 10:02:48
-
-## [SpringBoot 支付模块](http://simuleite.github.io/ComputerScience/%E9%A1%B9%E7%9B%AE/SpringBoot%20%E6%94%AF%E4%BB%98%E6%A8%A1%E5%9D%97/)
-**作者:** SIMULEITE
-**发表时间:** 2024-10-27
-
-**摘要:** 参考资料Gitee项目<a href="https://blog.csdn.net/m0_66490875/article/de
-
-**更新时间:** 2024-10-28 12:37:27
-
-## [动态规划学习指南](http://simuleite.github.io/ComputerScience/%E6%8C%87%E5%8D%97/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92%E5%AD%A6%E4%B9%A0%E6%8C%87%E5%8D%97/)
-**作者:** SIMULEITE
-**发表时间:** 2024-10-21
-
-**摘要:** Author：aatalykOrigin：LinkBefore starting the topic let me introduce myself. I am a Mobile Developer currently working in Warsaw and spending my free time for interview preparations. I started to prepare for interviews two years ago. At that time I should say I could not solve the two sum problem. Easy problems seemed to me like hard ones so most of the time I had to look at editorials and discuss section. Currently, I have solved ~800 problems and time to time participate in contests. I usually solve 3 problems in a contest and sometimes 4 problems. Ok, lets come back to the topic.Recently I have concentrated my attention on Dynamic Programming cause its one of the hardest topics in an interview prep. After solving ~140 problems in DP I have noticed that there are few patterns that can be found in different problems. So I did a research on that and find the following topics. I will not give complete ways how to solve problems but these patterns may be helpful in solving DP.PatternsMinimum (Maximum) Path to Reach a TargetDistinct WaysMerging IntervalsDP on StringsDecision Making
-
-**更新时间:** 2024-10-28 12:36:54
-
-## [Redis使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/Redis%E4%BD%BF%E7%94%A8/)
-**作者:** SIMULEITE
-**发表时间:** 2024-10-26
-
-**摘要:** General# 返回给定模式的keysKEYS patterKEYS * # 返回全部KEYS set* # 返回set开头的keysEXISTS keyTYPE keyDEL keyStringSET key valueGET key# Set Extend TimeSETEX key seconds value# Set When Key Not ExistSETNX key valueHashHSET key field valueHGET key fieldHDEL key field# Get All FieldsHKEYS key# Get All ValuesHVALS keyflowchart LRkey[key]item[field1: value1field2: value2]key --> itemListLPUSH key value1 value2# Get Key From Start To StopLRANGE key start stop# Right POPRPOP key# List LengthLLEN keySetSADD key mem1 mem2SMEMBERS key# Set SizeSCARD keySINTER key1 key2SUNION key1 key2# DeleteSREM key mem1 mem2Sorted Set / ZSetZADD key score1 mem1 score2 mem2# Show ListZRANGE key start stop (WITHSCORES)# Increse MemberZINCRBY key increment memberZREM key mem1 mem2
-
-**更新时间:** 2024-10-27 07:06:48
 
 ## [网络技术-二层安全](https://blog.nyc1.xyz/2024/10/20/%E7%BD%91%E7%BB%9C%E6%8A%80%E6%9C%AF-%E4%BA%8C%E5%B1%82%E5%AE%89%E5%85%A8/)
 **作者:** NgaiYeanCoi
@@ -137,30 +345,6 @@
 **摘要:** 前言介于我在国庆回家的路上在想着怎么样才能让自己的社团成员学习到维修的一些知识呢，我想到了写一篇blog来教你们如何快速的入门。作为24届白云学院计协维修部的副部长，具备扎实的电脑维修知识和实践能力是作为维修部成员是必备的素质。我希望这一篇指南可以传承下去让白云学院每一届的维修部的同学都有所受益。本指南将从电脑的基础知识入手，详细介绍电脑各个部件的功能与作用，并通过实践拆装电脑、清灰等操作，让大家亲自动手，掌握实用的维修技巧，我们还将深入讲解BIOS的基本概念和常用设置，以及如何重装系统等高级操作。此篇适用于广东白云学院计算机协会维修部或者其他部门的每一个成员，以及为有兴趣的同学提供学习指南。
 
 **更新时间:** 2024-10-19 14:20:40
-
-## [mysql使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/mysql%E4%BD%BF%E7%94%A8/)
-**作者:** SIMULEITE
-**发表时间:** 2024-07-26
-
-**摘要:** 使用启动数据库# 需要管理员权限net start <mysql-service_name>登录数据库mysql -u <username> -p$ <password>导入数据库-- 设置中文字符集mysql>SETNAMES'utf8mb4';mysql>SETcharacter_set_server='utf8mb4';mysql>SOURCE/path/to/database.sql;数据库-- 创建数据库CREATEDATABASE yourDatabaseCHARACTERSETutf8mb4;-- 查看所有数据库showdatabases;-- 进入数据库use yourDatabase表-- 建表CREATETABLEyourTable (idINTAUTO_INCREMENTPRIMARYKEY,namevarchar(50)NOTNULLDEFAULT'worker',ageINT,addrvarchar(50));-- 删除表drop<table>;-- 查看表showtables;-- 修改表altertable<table>add<col>char(20)dropcolumn<col>;-- 删除整张表droptable<table>;
-
-**更新时间:** 2024-10-10 11:55:08
-
-## [AI爱外卖](http://simuleite.github.io/ComputerScience/%E9%A1%B9%E7%9B%AE/AI%E7%88%B1%E5%A4%96%E5%8D%96/)
-**作者:** SIMULEITE
-**发表时间:** 2024-09-20
-
-**摘要:** 项目心得24.10.
-
-**更新时间:** 2024-10-09 12:03:43
-
-## [OS 操作系统](http://simuleite.github.io/ComputerScience/%E8%AF%BE%E7%A8%8B/OS%20%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F/)
-**作者:** SIMULEITE
-**发表时间:** 2024-08-06
-
-**摘要:** Chapter3 操作系统结构复杂度管理方法 M.A.L.HModularity: 模块化，分而治之Abstraction: 抽象，接口与实现分离，遵循宽进严出原则。例如虚拟内存、文件系统对于大型系统，只有模块化和抽象，可能导致划分模块太多，交互关系复杂，因此还需要引入分层和层次结构控制复杂度。Layering: 分层，每个层级是一套完整机制。通常一个模块只能与本层和上下层交互，不能跨层。例如OSI、TCP/IPHierarchy: 层次结构，大的子系统由多个小的子系统组织成。即同级模块的分层宽进严出原则：容忍各种输入（包括恶意输入），严格控制模块的对外输出微内核宏内核架构：单点bug使整个系统崩溃。微内核：解耦单个功能/模块（如文件系统、设备驱动）作为独立服务隔离运行，使内核成为一个最小功能集。微内核架构服务隔离，单点出问题系统不会崩溃内核态部分，称为μkernel\mu kernelμkernel微内核优势：弹性硬件拓展能力硬件异构实现功能安全信息安全时延确定现代操作系统特征：1）虚拟内存；2）用户态、内核态隔离。
-
-**更新时间:** 2024-10-06 08:24:22
 
 ## [MarkDown的使用教程](https://blog.nyc1.xyz/2023/11/04/MarkDown%E7%9A%84%E4%BD%BF%E7%94%A8%E6%95%99%E7%A8%8B/)
 **作者:** NgaiYeanCoi
@@ -186,14 +370,6 @@
 
 **更新时间:** 2024-10-05 16:48:58
 
-## [liunx安全管理](https://blog.nyc1.xyz/2024/04/20/liunx%E5%AE%89%E5%85%A8%E7%AE%A1%E7%90%86/)
-**作者:** NgaiYeanCoi
-**发表时间:** 2024-04-20
-
-**摘要:** 前言介于上次被一个陌生的德国ip入侵之后不得已重置整个系统，所有已经部署的业务都得重来。由此可见做好安全管理多么重要！以下一些常见的操作来增加系统安全防止被恶意入侵Linux安全管理之SSH安全备份记得备份好你的SSHD的配置文件以防万一1# cp /etc/ssh/sshd_config /etc/ssh/backup.sshd_configOpenSSH的路径OpenSSH 服务的配置文件路径为 /etc/ssh/sshd_config ，要配置它，必须得使用系统管理员（ root ）权限或使用 sudo 命令临时获得的管理员权限。配置信息大概长这样的链接这里默认你已经会用编辑工具没有的话请安装VIM1# apt-get install vim编辑配置文件准备好就直接编辑1# vim /etc/ssh/sshd_config
-
-**更新时间:** 2024-10-05 16:42:53
-
 ## [利用gost中转隧道中转加密](https://blog.nyc1.xyz/2024/03/27/%E5%88%A9%E7%94%A8gost%E4%B8%AD%E8%BD%AC%E9%9A%A7%E9%81%93%E4%B8%AD%E8%BD%AC%E5%8A%A0%E5%AF%86/)
 **作者:** NgaiYeanCoi
 **发表时间:** 2024-03-27
@@ -201,14 +377,6 @@
 **摘要:** 原脚本功能实现了systemd及gost配置文件对gost进行管理在不借助其他工具(如screen)的情况下实现多条转发规则同时生效机器reboot后转发不失效支持传输类型：tcp+udp不加密转发relay+tls加密此脚本新增功能增加了传输类型选择功能新支持传输类型relay+wsrelay+wss落地机一键创建ss/socks5/http代理 (gost内置)支持多传输类型的多落地简单型均衡负载增加gost国内加速下载镜像（被恶意刷流量导致我损失，不再提供）简单创建或删除gost定时重启任务脚本自动检查更新转发CDN自选节点ip支持自定义tls证书，落地可一键申请证书，中转可开启证书校验开源来自KANIKIG/Multi-EasyGostgost的脚本的安装命令
 
 **更新时间:** 2024-10-01 17:41:19
-
-## [UFW防火墙](https://blog.nyc1.xyz/2024/03/18/UFW%E9%98%B2%E7%81%AB%E5%A2%99/)
-**作者:** NgaiYeanCoi
-**发表时间:** 2024-03-18
-
-**摘要:** 安装Ubuntu & Debian1# apt-get install ufw -yCentOSCentOS默认软件源不提供UFW，所以你需要安装EPEL软件源，运行以下命令：1# yum install epel-release -y安装完成后使用以下命令安装UFW：1# yum install --enablerepo="epel" ufw -yUFW安装后，可以通过以下命令来启动UFW服务并使其在启动时启动（一般在完成默认配置后再重启）：1# ufw enable如果运行ufw命令时报Command Not Found错误，可以使用whereis ufw来确定ufw的位置，之后你也可以顺手设置一下alias。接下来，使用以下命令检查UFW的状态，可以看到以下输出：12# ufw statusStatus: active还可以通过运行以下命令来禁用UFW防火墙（后面可以通过enable命令随时启用服务）：1# ufw disable如果你决定要重新开始，则可以使用reset命令：1# ufw reset这将禁用UFW并删除之前定义的任何规则。
-
-**更新时间:** 2024-10-01 17:41:10
 
 ## [OpenSSH服务器ssh_config](https://blog.nyc1.xyz/2024/03/18/SSHD%E9%85%8D%E7%BD%AE%E7%9A%84%E8%A7%A3%E9%87%8A/)
 **作者:** NgaiYeanCoi
@@ -218,14 +386,6 @@
 
 **更新时间:** 2024-10-01 17:38:12
 
-## [CS61B sp18](http://simuleite.github.io/ComputerScience/%E8%AF%BE%E7%A8%8B/CS61B%20sp18/)
-**作者:** SIMULEITE
-**发表时间:** 2024-08-20
-
-**摘要:** Gradescope AutograderSpring 201844个Assn，偏向数据结构邀请码：MNXYKX学校：UC Berkeley直接输入，不要选择2U-UC Berkeley，否则将提示COURSE ENTRY CODE IS INVALIDSpring 202119个Assn，偏向软件工程邀请码：MB7ZPY文章收录The Law of the Broken Futon浮沙筑高台法则“Since I’m fine now, can’t I add that missing piece later, when it’s actually needed?” Sometimes, yes. But it’s much harder.Adding the missing piece later means waiting until the damage is already underway, and hellishly difficult to undo.A Response to “Why Most Unit Testing is Waste”(Unit Tests) They are based onprogrammers’ fantasies about how the function should work. But programmers break down requirements into smaller components all the time – this is how you program. Sometimes there are misunderstandings, but that is the exception, not the rule, in my opinion.2.1 Mystery of Java RestoreWhen instantiate an Object,obj = new Object(),objstores the addressof the Object, not the specific data struction.(That is why all type of variables create memory boxes of 64 bits. It is just the memory of the address.)Therefore, When we useobj2 = obj, Java simply copy the addr ofobjand assign it toobj2(They are pointing to the same Object), that is why when we changeobj2.weightit effectsobj.weighttoo.
-
-**更新时间:** 2024-09-30 03:01:12
-
 ## [DNS Over Https](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/DNS%20Over%20Https/)
 **作者:** SIMULEITE
 **发表时间:** 2024-09-09
@@ -234,46 +394,6 @@
 
 **更新时间:** 2024-09-10 11:25:58
 
-## [Listary使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/Listary%E4%BD%BF%E7%94%A8/)
-**作者:** SIMULEITE
-**发表时间:** 2024-08-15
-
-**摘要:** 网络搜索网站URL备注</the
-
-**更新时间:** 2024-08-16 12:08:33
-
-## [Spring Boot](http://simuleite.github.io/ComputerScience/%E9%A1%B9%E7%9B%AE/Spring%20Boot/)
-**作者:** SIMULEITE
-**发表时间:** 2024-07-23
-
-**摘要:** Spring CLI可以用Spring Init
-
-**更新时间:** 2024-07-25 07:50:44
-
-## [网络是怎样连接的](http://simuleite.github.io/ComputerScience/%E7%AC%94%E8%AE%B0/%E7%BD%91%E7%BB%9C%E6%98%AF%E6%80%8E%E6%A0%B7%E8%BF%9E%E6%8E%A5%E7%9A%84/)
-**作者:** SIMULEITE
-**发表时间:** 2024-07-24
-
-**摘要:** Web浏览器网址就是请求服务器上对应的文件DNS从顶级域名开始根据网址查IP。DNS服务器通过缓存查过的IP来加快服务
-
-**更新时间:** 2024-07-25 00:33:01
-
-## [ThinkPHP 6](http://simuleite.github.io/ComputerScience/%E9%A1%B9%E7%9B%AE/ThinkPHP%206/)
-**作者:** SIMULEITE
-**发表时间:** 2024-07-18
-
-**摘要:** ThinkPHP 6.0文档<a class="markdownIt-Anchor" href
-
-**更新时间:** 2024-07-23 07:29:59
-
-## [Windows scripts使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/Windows%20scripts%E4%BD%BF%E7%94%A8/)
-**作者:** SIMULEITE
-**发表时间:** 2024-07-15
-
-**摘要:** Task SchedulerWIN+R,taskschd.msc<br
-
-**更新时间:** 2024-07-16 08:45:20
-
 ## [若人生是场大梦啊——记我人生的前19年](https://blog.canyie.top/2023/11/06/first-19-years-of-my-life/)
 **作者:** 残页
 **发表时间:** 2023-11-06
@@ -281,14 +401,6 @@
 **摘要:** 上次发年终总结还是 2022 年发 2021 年的，2022 年的年终总结缺失了。今年发生了好多好多的事情，一直想写今年的年终总结但是却总没到年终，干脆写成前 19 年纪念吧。
 
 **更新时间:** 2024-07-03 23:19:21
-
-## [Mermaid使用](http://simuleite.github.io/ComputerScience/%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C/Mermaid%E4%BD%BF%E7%94%A8/)
-**作者:** SIMULEITE
-**发表时间:** 2024-06-28
-
-**摘要:** Flowchart<a class="markdownIt-Anchor" href="#基本语法
-
-**更新时间:** 2024-06-29 12:56:55
 
 ## [hexo的一些命令](https://blog.nyc1.xyz/2024/03/17/hexo/)
 **作者:** NgaiYeanCoi
